<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/popup_bg">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:text="@string/label_title"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/label_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:gravity="center"
        android:hint="@string/label_hint"
        android:textSize="14sp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="16dp">

        <Button
            android:id="@+id/back"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_neutral"
            android:text="@string/button_back"
            android:textColor="@color/appPrimary" />


        <Button
            android:id="@+id/OK"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_toEndOf="@id/back"
            android:background="@drawable/button_success"
            android:text="@string/button_ok"
            android:textColor="@android:color/white" />

    </RelativeLayout>

</RelativeLayout>