<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:id="@+id/mapLayout">
        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            tools:context=".TestChangeLayout" />
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_location_on_red_30dp"
            android:layout_gravity="center"
            android:layout_marginBottom="22dp"/>
    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/mapLayout"
        android:paddingLeft="30dp">

        <TextView
            android:id="@+id/location_menu_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/lato"
            android:text="@string/location_title"
            android:textSize="@dimen/title_size" />

        <ImageView
            android:id="@+id/location_logo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@id/location_menu_title"
            android:src="@drawable/ic_location_on_gray_30dp" />

        <TableLayout
            android:id="@+id/location_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/location_menu_title"
            android:layout_marginStart="4dp"
            android:layout_toEndOf="@id/location_logo"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample"
                android:textSize="@dimen/title_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_sample"
                android:textSize="@dimen/name_size" />

        </TableLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@id/location_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp">

            <Button
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:background="@drawable/button_neutral"
                android:fontFamily="@font/loew"
                android:text="@string/button_back"
                android:textAllCaps="false"
                android:onClick="backToAdd" />

            <Button
                android:id="@+id/choose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_toEndOf="@id/back"
                android:background="@drawable/button_success"
                android:fontFamily="@font/loew"
                android:text="@string/choose"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>